negotiator_v3/negotiator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: negotiator-v3
spec:
  replicas: 1
  minReadySeconds: 30
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      service: negotiator-v3-service
  template:
    metadata:
      labels:
        service: negotiator-v3-service
    spec:
      containers:
      - name: negotiator-v3
        #image: bbmrieric/negotiator:3.0.3
        image: bbmrieric/negotiator:3.4.0
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1001
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "125m"
            memory: "512Mi"
          limits:
            cpu: "0.2"
            memory: "1Gi"
