negotiator_v3/negotiator-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: negotiator-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: negotiator-frontend
  template:
    metadata:
      labels:
        app: negotiator-frontend
    spec:
      containers:
      - name: negotiator-frontend
        image: bbmrieric/negotiator-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
