negotiator_v3/negotiator-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: negotiator-frontend
