negotiator_v3/negotiator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: negotiator-v3-service
spec:
  type: NodePort
  ports:
  - nodePort: 30025
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    service: negotiator-v3-service
