negotiator_v3/negotiator-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: negotiator-ingress
  namespace: negotiator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  tls:
    - hosts:
        - negotiator.eucaim.cancerimage.eu
      secretName: negotiator.eucaim.cancerimage.eu
  rules:
    - host:  negotiator.eucaim.cancerimage.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: negotiator-frontend
                port:
                  number: 8080
